Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18747

Wrong registry object types in Explorer's RegistryFolder (compared to Regedit)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Shell
    • None

    Description

      reactos-bootcd-0.4.15-dev-5517-g9762ef9-x86-gcc-lin-dbg

      See below

      RegistryFolder shows REG_EXPAND_SZ while Regedit shows REG_SZ on DispFileName

      RegistryFolder shows REG_BINARY while Regedit shows REG_SZ on (Default)

      Regedit Types : static void OnGetDispInfo(NMLVDISPINFO* plvdi) from https://git.reactos.org/?p=reactos.git;a=blob;f=base/applications/regedit/listview.c#l313

      Explorer's RegistryFolder Types : const LPCWSTR RegistryTypeNames [] from https://git.reactos.org/?p=reactos.git;a=blob;f=dll/shellext/ntobjshex/ntobjenum.cpp#l46 later used in CRegistryFolder::GetDetailsEx : https://git.reactos.org/?p=reactos.git;a=blob;f=dll/shellext/ntobjshex/regfolder.cpp#l221

      Attachments

        Activity

          People

            Serge Gautherie Serge Gautherie
            KRosUser KRosUser
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: