[NTOBJSHEX] Fix displayed registry value type and icon

RegistryTypeNames[]:
Remove an unwanted space.

CRegistryFolderExtractIcon::GetIconLocation():
Add the REG_ENTRY_VALUE_WITH_CONTENT case.

CRegistryFolder::GetDetailsOf():
Fix a copypasta.

CORE-18747